@@ -2,7 +2,6 @@ package practice;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
@@ -10,9 +9,7 @@ import model.Cat;
 import model.Person;
 
 public class StreamPractice {
-    private static final String EXCEPTION_MIN_VALUE_MESSAGE = "Can't get min value from list: ";
-    private static final String TARGET = " ";
-    private static final String REPLACEMENT = "";
+    private static final String EXCEPTION_MESSAGE = "Can't get min value from list: ";
     private static final String REGEX = ",";
 
     /**
@@ -23,15 +20,13 @@ public class StreamPractice {
      * "Can't get min value from list: < Here is our input 'numbers' >"
      */
     public int findMinEvenNumber(List<String> numbers) {
-        if (numbers.size() == 0) {
-            throw new RuntimeException(EXCEPTION_MIN_VALUE_MESSAGE + numbers);
-        }
         return numbers.stream()
-                .map(string -> List.of(string.replace(TARGET, REPLACEMENT).split(REGEX)))
-                .flatMapToInt(listString -> listString.stream().mapToInt(Integer::parseInt))
-                .filter(number -> !isOddNumber(number))
+                .map(s -> List.of(s.split(REGEX)))
+                .flatMap(Collection::stream)
+                .mapToInt(Integer::parseInt)
+                .filter(n -> n % 2 == 0)
                 .min()
-                .getAsInt();
+                .orElseThrow(() -> new RuntimeException(EXCEPTION_MESSAGE + numbers));
     }
 
     /**
@@ -41,14 +36,12 @@ public class StreamPractice {
      */
     public Double getOddNumsAverage(List<Integer> numbers) {
         return IntStream.range(0, numbers.size())
-                .map(index -> isOddNumber(index) ? numbers.get(index) - 1 : numbers.get(index))
-                .filter(StreamPractice::isOddNumber)
+                .map(i -> i % 2 != 0 ? numbers.get(i) - 1 : numbers.get(i))
+                .boxed()
+                .filter(n -> n % 2 != 0)
+                .mapToDouble(n -> n)
                 .average()
                 .getAsDouble();
-    }
-
-    private static boolean isOddNumber(int number) {
-        return number % 2 != 0;
     }
 
     /**
@@ -63,7 +56,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> fromAge <= p.getAge() && p.getAge() <= toAge
                         && p.getSex() == Person.Sex.MAN)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -78,16 +71,11 @@ public class StreamPractice {
      */
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
-        Predicate<Person> isAgeInRange = person -> {
-            int age = person.getAge();
-            Person.Sex sex = person.getSex();
-
-            return (sex == Person.Sex.MAN && age >= fromAge && age <= maleToAge)
-                    || (sex == Person.Sex.WOMAN && age >= fromAge && age <= femaleToAge);
-        };
-
         return peopleList.stream()
-                .filter(isAgeInRange)
+                .filter(p -> (p.getSex() == Person.Sex.MAN && p.getAge() >= fromAge
+                        && p.getAge() <= maleToAge)
+                        || (p.getSex() == Person.Sex.WOMAN && p.getAge() >= fromAge
+                        && p.getAge() <= femaleToAge))
                 .collect(Collectors.toList());
     }
 
